Add flutter_native_splash configuration for iOS and Android
- Set default splash screen color and image.
- Include specific splash screen image for Android 12.
- Add animation to appbar title

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,17 +28,21 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_text_kit: ^4.3.0
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   flutter:
     sdk: flutter
   flutter_bloc: ^7.0.0
+  flutter_native_splash: ^2.4.7
   flutter_offline: ^6.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.14.4
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  rename_app: ^1.6.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -75,3 +79,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/luncherIcon.png"
